Added Navbar & Debug Page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,8 +2,8 @@
 
 <div class="container">
     <h1>Welcome to FetchWoo!</h1>
-    <a href="test" class="btn">Test</a>
-    <a href="retrieve" class="btn">Retrieve</a>
+    <a href="/retrieve" class="btn">Retrieve</a>
+    <a href="/debug" class="btn">Debug</a>
 </div>
 
 <%- include ("./partials/footer") %> 
