--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,15 @@
 table {
     margin-bottom: 30px;
 }
+
+.btn {
+    background-color: #0277bd;
+}
+
+.btn:hover {
+    background-color:#81d4fa;
+}
+
+.json-view {
+    border: #00bcd4 solid 3px;
+}
