--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,4 +14,15 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-wrapper cyan">
+            <div class="container">
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/retrieve">Retrieve</a></li>
+                    <li><a href="/debug">Debug</a></li>
+                </ul>
+            </div>
+        </div>
+        </nav>
+            
