--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,9 @@
+        <footer>
+            <div class="footer-copyright">
+                <div class="container">
+                    Copyright © 2020 Hao Teng. All Rights Reserved.
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
