--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,25 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FetchWoo</title>
+
+    <!-- Import Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
      <!-- Compiled and minified CSS -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-     <!-- Import local CSS style sheet -->
+     <!-- Import Local CSS Style Sheet -->
      <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
+
+     <!-- Import local JavaScript File -->
+     <script src="/js/index.js"></script>
 </head>
 <body>
     <nav>
         <div class="nav-wrapper cyan">
             <div class="container">
-                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="left hide-on-med-and-down">
                     <li><a href="/">Home</a></li>
                     <li><a href="/retrieve">Retrieve</a></li>
                     <li><a href="/debug">Debug</a></li>
                 </ul>
             </div>
         </div>
-        </nav>
+      </nav>
+    
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="/">Home</a></li>
+        <li><a href="/retrieve">Retrieve</a></li>
+        <li><a href="/debug">Debug</a></li>
+      </ul>
             
